# Aura

./: .gitignore  README.md  build.py  config.example.toml  pyproject.toml
.github/workflows/: build-check.yml
aura/: __init__.py  __main__.py  ai_service.py  app.py  bookmarks.py  chunker.py  config.py  embedding.py  image_render.py  pdf_engine.py  rag.py  recent_files.py  session.py  vector_store.py
aura/styles/: app.tcss
aura/widgets/: __init__.py  ai_sidebar.py  file_dialog.py  pdf_viewer.py  search_dialog.py  toc_panel.py
scripts/: build_standalone.py  check_terminal.py  test_halfcell_render.py  test_raw_sixel.py  test_sixel_render.py
tests/: test_bookmarks.py  test_chunker.py  test_config.py  test_rag.py  test_recent_files.py  test_session.py  test_vector_store.py
