[project]
name = "aura"
version = "0.1.0"
description = "A modern TUI PDF reader with AI assistant"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "lichen", email = "1725350830@qq.com" },
]
keywords = ["pdf", "tui", "textual", "reader", "llm", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=2.0.0",
    "textual-image[textual]>=0.8.0",
    "pillow>=10.3.0",
    "pdf2image>=1.17.0",
    "pymupdf>=1.25.0",
    "pymupdf4llm>=0.0.17",
    "pymupdf-layout>=1.27.0",
    "litellm>=1.40.0",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/loveRyujin/Aura"
Repository = "https://github.com/loveRyujin/Aura"
Issues = "https://github.com/loveRyujin/Aura/issues"

[project.scripts]
aura = "aura.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
